--- a/UsuariosApi/appsettings.json
+++ b/UsuariosApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UsuarioConnection": "server=localhost;database=usuariodb;user=root;password=6765392"
+    "UsuarioConnection": "server=localhost;database=usuariodb;user=root;password=123"
   }
 }
   
